# Planday

./: .gitignore  README.md  run_base_model_evaluation.py
.claude/: settings.local.json
dataset_generation/: generate.py
evaluation/: unsloth_inference.py
evaluation/results/Qwen2.5-Coder-14B-Instruct/: 1.txt  10.txt  12.txt  13.txt  18.txt  19.txt  20.txt  21.txt  23.txt  25.txt  26.txt  27.txt  3.txt  30.txt  31.txt  32.txt  4.txt  44.txt  46.txt  53.txt  55.txt  56.txt  58.txt  59.txt  60.txt  61.txt  67.txt  7.txt  70.txt  75.txt  77.txt  8.txt  81.txt  85.txt  92.txt  95.txt  96.txt
evaluation/results/Qwen2.5-Coder-7B-Instruct/: 15.txt  19.txt  (+30 more)
grpo for planday/: .gitignore  README.md  plot_evaluation_results.py  prompts.txt  run_evaluation.py  train_grpo.py
grpo for planday/.ipynb_checkpoints/: train_grpo-checkpoint.ipynb
grpo for planday/dataset_generation/: events_categories_names.json
grpo for planday/evaluation/: eval.py  vllm_inference.py
grpo for planday/grpo_trainer_lora_model/: adapter_config.json
planday-agent/: .env.example  .gitignore  README.md  pyproject.toml  quick-start.sh  run.py  server.py  start-macos.sh  start.bat  start.sh
planday-agent/frontend/: package.json  tailwind.config.js
planday-agent/frontend/public/: index.html
planday-agent/frontend/src/: App.tsx  index.css  index.tsx
planday-agent/frontend/src/components/: AssistantAvatar.tsx  ChatHeader.tsx  DataDisplay.tsx  ErrorMessage.tsx  EventCard.tsx  ImageDisplay.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  RecommendationCard.tsx  TaskCard.tsx  TypingIndicator.tsx  UserAvatar.tsx  WelcomeMessage.tsx
planday-agent/frontend/src/hooks/: useChat.ts
planday-agent/frontend/src/services/: api.ts
planday-agent/frontend/src/types/: index.ts
planday-agent/frontend/src/utils/: sessionUtils.ts
planday-agent/mcp/apple-reminders-mcp-main/: .gitignore  README.md  package-lock.json  package.json
planday-agent/mcp/apple-reminders-mcp-main/src/: index.ts  reminders.ts
planday-agent/mcp/apple-reminders-mcp-main/src/tests/: test-reminders.ts
planday-agent/mcp/mcp-ical/src/mcp_ical/: models.py  server.py
planday-agent/src/: __init__.py  cli.py  main.py
planday-agent/src/core/: agent_supervisor.py
planday-agent/src/graph/: graph_factory.py
planday-agent/src/state/: __init__.py  schemas.py
planday-agent/src/tools/: __init__.py  calendar_tools.py  parser_tools.py  planning_tools.py  task_tools.py
planday-agent/src/utils/: __init__.py  cli_utils.py  error_handler.py  llm_manager.py  scheduling.py
planday-agent/tests/tools/: test_task_tools.py
qwen-scheduler-grpo/: README.md  trainlog.txt
qwen-scheduler-grpo/completion_samples/: completion_samples.txt
(+333 files in other folders)
